syntax = "proto3";

import "algo.proto";

option go_package = "github.com/gford1000-go/protobuf/types/encryption";

message EncryptedObject {

    bytes keyToken = 1;
    Algo a = 2;
    bytes v = 3;
}



